syntax = "proto3";
package proto;

option go_package = "./pb";

service AuthService {
    rpc Login(AuthLoginRequest) returns (AuthLoginResponse);
    rpc Logout(AuthLogoutRequest) returns (AuthLogoutResponse);
    rpc Me(AuthMeRequest) returns (AuthMeResponse);
    rpc Refresh(AuthRefreshRequest) returns (AuthRefreshResponse);
    rpc ValidateToken(AuthValidateTokenRequest) returns (AuthValidateTokenResponse);
    rpc ValidatePermission(AuthValidatePermissionRequest) returns (AuthValidatePermissionResponse);
}

message AuthLoginRequest {
    string username = 1;
    string password = 2;
}

message AuthLoginResponse {
    string access_token = 1;
    string access_expired = 2;
    string refresh_token = 3;
    string refresh_expired = 4;
    string username = 5;
}

message AuthLogoutRequest {
}

message AuthLogoutResponse {
}

message AuthMeRequest {
}

message AuthMeResponse {
    string id = 1;
    string username = 2;
    string role_code = 3;
    string role_name = 4;
    repeated string permissions = 5;
}

message AuthRefreshRequest {
    string token = 1;
}

message AuthRefreshResponse {
    string access_token = 1;
    string access_expired = 2;
    string refresh_token = 3;
    string refresh_expired = 4;
    string username = 5;
}

message AuthValidateTokenRequest {
    string token = 1;
}

message AuthValidateTokenResponse {
    string user_id = 1;
    string role_code = 2;
}

message AuthValidatePermissionRequest {
    string user_id = 1;
    string full_method = 2;
}

message AuthValidatePermissionResponse {
}